# mistlefoot

./: 00_core.html  00_core.md  CHANGELOG.md  README.md  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
mistlefoot/: _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
